// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Connected Scatter Plot Chart renders correctly with default props 1`] = `
<div
  class=" relative"
  data-testid="ConnectedScatterPlotChart-testId"
>
  <svg
    height="500"
    width="800"
  >
    <g
      class="visx-group"
      transform="translate(80, 68)"
    >
      <defs>
        <pattern
          height="10"
          id="predictedStripesPattern"
          patternTransform="rotate(45)"
          patternUnits="userSpaceOnUse"
          width="10"
        >
          <rect
            fill="#FFFFFF"
            filter="url(#connected-scatter-plot=diagonal-shadow)"
            height="10"
            width="1"
            x="0"
            y="0"
          />
        </pattern>
        <filter
          height="200%"
          id="connected-scatter-plot=diagonal-shadow"
          width="200%"
          x="-50%"
          y="-50%"
        >
          <fedropshadow
            dx="0"
            dy="1"
            flood-color="#000000"
            flood-opacity="0.07"
            stdDeviation="0.5"
          />
        </filter>
        <pattern
          height="1"
          id="horizontal-grid-dash-pattern-csp"
          patternUnits="userSpaceOnUse"
          width="8"
        >
          <rect
            fill="#e0e0e0"
            height="1"
            width="4"
            x="0"
            y="0"
          />
        </pattern>
        <pattern
          height="8"
          id="vertical-grid-dash-pattern-csp"
          patternUnits="userSpaceOnUse"
          width="1"
        >
          <rect
            fill="#e0e0e0"
            height="4"
            width="1"
            x="0"
            y="0"
          />
        </pattern>
        <pattern
          height="4"
          id="tooltip-line-dash-pattern-csp"
          patternUnits="userSpaceOnUse"
          width="1"
        >
          <rect
            fill="#323C4D"
            height="2"
            width="1"
            x="0"
            y="0"
          />
        </pattern>
      </defs>
      <g
        class="visx-group visx-axis visx-axis-bottom"
        transform="translate(0, 320)"
      >
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0, 0)"
        >
          <svg
            style="overflow: visible;"
            x="-0.5rem"
            y="0"
          >
            <text
              class="!label-small fill-[rgba(0,0,0,0.4)] text-left"
              dominant-baseline="middle"
              text-anchor="start"
              transform=""
              x="0"
              y="18"
            >
              <tspan
                dy="0.355em"
                x="0"
              >
                NaN
              </tspan>
            </text>
          </svg>
        </g>
        <svg
          font-size="10"
          style="overflow: visible;"
          x="0"
          y="0"
        >
          <text
            class="visx-axis-label label-small fill-text-text font-medium"
            fill="#222"
            font-family="Arial"
            font-size="10"
            text-anchor="middle"
            x="355"
            y="48"
          >
            <tspan
              dy="0em"
              x="355"
            >
              Time Spent (minutes)
            </tspan>
          </text>
        </svg>
      </g>
      <g
        class="visx-group visx-axis visx-axis-left"
        transform="translate(0.2, 0)"
      >
        <line
          class="visx-line visx-axis-line stroke-border-border"
          fill="transparent"
          shape-rendering="crispEdges"
          stroke="#222"
          stroke-dasharray="4 4"
          stroke-width="1"
          x1="0"
          x2="0"
          y1="320.5"
          y2="0.5"
        />
        <svg
          font-size="10"
          style="overflow: visible;"
          x="0"
          y="0"
        >
          <text
            class="visx-axis-label !label-small fill-text-text font-medium"
            fill="#222"
            font-family="Arial"
            font-size="10"
            text-anchor="middle"
            transform="rotate(-90)"
            x="-160"
            y="-28"
          >
            <tspan
              dy="0em"
              x="-160"
            >
              Amount Spent (INR)
            </tspan>
          </text>
        </svg>
      </g>
      <g
        class="visx-group visx-rows"
        transform="translate(0, 0)"
      />
      <rect
        fill="rgba(208, 211, 216, 1)"
        height="1"
        shape-rendering="crispEdges"
        width="710"
        x="0"
        y="320"
      />
      <g
        class="visx-group visx-columns"
        transform="translate(0, 0)"
      >
        <rect
          fill="transparent"
          height="320"
          shape-rendering="crispEdges"
          width="1"
          x="0"
          y="0"
        />
      </g>
      <path
        class="visx-linepath"
        d="MNaN,NaNLNaN,NaN"
        fill="transparent"
        stroke="#F15701"
        stroke-linecap="round"
        stroke-width="1"
      />
      <circle
        class="visx-circle"
        fill="#F15701"
        r="4"
        stroke="none"
        stroke-width="0"
      />
      <circle
        class="visx-circle"
        fill="#F15701"
        r="4"
        stroke="none"
        stroke-width="0"
      />
      <rect
        fill="transparent"
        height="320"
        width="710"
        x="0"
        y="0"
      />
    </g>
  </svg>
</div>
`;

exports[`Connected Scatter Plot Chart renders single with default props 1`] = `
<div
  class=" relative"
  data-testid="ConnectedScatterPlotChart-testId"
>
  <svg
    height="500"
    width="800"
  >
    <g
      class="visx-group"
      transform="translate(80, 68)"
    >
      <defs>
        <pattern
          height="10"
          id="predictedStripesPattern"
          patternTransform="rotate(45)"
          patternUnits="userSpaceOnUse"
          width="10"
        >
          <rect
            fill="#FFFFFF"
            filter="url(#connected-scatter-plot=diagonal-shadow)"
            height="10"
            width="1"
            x="0"
            y="0"
          />
        </pattern>
        <filter
          height="200%"
          id="connected-scatter-plot=diagonal-shadow"
          width="200%"
          x="-50%"
          y="-50%"
        >
          <fedropshadow
            dx="0"
            dy="1"
            flood-color="#000000"
            flood-opacity="0.07"
            stdDeviation="0.5"
          />
        </filter>
        <pattern
          height="1"
          id="horizontal-grid-dash-pattern-csp"
          patternUnits="userSpaceOnUse"
          width="8"
        >
          <rect
            fill="#e0e0e0"
            height="1"
            width="4"
            x="0"
            y="0"
          />
        </pattern>
        <pattern
          height="8"
          id="vertical-grid-dash-pattern-csp"
          patternUnits="userSpaceOnUse"
          width="1"
        >
          <rect
            fill="#e0e0e0"
            height="4"
            width="1"
            x="0"
            y="0"
          />
        </pattern>
        <pattern
          height="4"
          id="tooltip-line-dash-pattern-csp"
          patternUnits="userSpaceOnUse"
          width="1"
        >
          <rect
            fill="#323C4D"
            height="2"
            width="1"
            x="0"
            y="0"
          />
        </pattern>
      </defs>
      <g
        class="visx-group visx-axis visx-axis-bottom"
        transform="translate(0, 320)"
      >
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0, 0)"
        >
          <svg
            style="overflow: visible;"
            x="-0.5rem"
            y="0"
          >
            <text
              class="!label-small fill-[rgba(0,0,0,0.4)] text-left"
              dominant-baseline="middle"
              text-anchor="start"
              transform=""
              x="118.33333333333333"
              y="18"
            >
              <tspan
                dy="0.355em"
                x="118.33333333333333"
              >
                10
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0, 0)"
        >
          <svg
            style="overflow: visible;"
            x="-0.5rem"
            y="0"
          >
            <text
              class="!label-small fill-[rgba(0,0,0,0.4)] text-left"
              dominant-baseline="middle"
              text-anchor="start"
              transform=""
              x="236.66666666666666"
              y="18"
            >
              <tspan
                dy="0.355em"
                x="236.66666666666666"
              >
                20
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0, 0)"
        >
          <svg
            style="overflow: visible;"
            x="-0.5rem"
            y="0"
          >
            <text
              class="!label-small fill-[rgba(0,0,0,0.4)] text-left"
              dominant-baseline="middle"
              text-anchor="start"
              transform=""
              x="355"
              y="18"
            >
              <tspan
                dy="0.355em"
                x="355"
              >
                30
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0, 0)"
        >
          <svg
            style="overflow: visible;"
            x="-0.5rem"
            y="0"
          >
            <text
              class="!label-small fill-[rgba(0,0,0,0.4)] text-left"
              dominant-baseline="middle"
              text-anchor="start"
              transform=""
              x="473.3333333333333"
              y="18"
            >
              <tspan
                dy="0.355em"
                x="473.3333333333333"
              >
                40
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0, 0)"
        >
          <svg
            style="overflow: visible;"
            x="-0.5rem"
            y="0"
          >
            <text
              class="!label-small fill-[rgba(0,0,0,0.4)] text-left"
              dominant-baseline="middle"
              text-anchor="start"
              transform=""
              x="591.6666666666667"
              y="18"
            >
              <tspan
                dy="0.355em"
                x="591.6666666666667"
              >
                50
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0, 0)"
        >
          <svg
            style="overflow: visible;"
            x="-0.5rem"
            y="0"
          >
            <text
              class="!label-small fill-[rgba(0,0,0,0.4)] text-left"
              dominant-baseline="middle"
              text-anchor="start"
              transform=""
              x="710"
              y="18"
            >
              <tspan
                dy="0.355em"
                x="710"
              >
                60
              </tspan>
            </text>
          </svg>
        </g>
        <svg
          font-size="10"
          style="overflow: visible;"
          x="0"
          y="0"
        >
          <text
            class="visx-axis-label label-small fill-text-text font-medium"
            fill="#222"
            font-family="Arial"
            font-size="10"
            text-anchor="middle"
            x="355"
            y="48"
          >
            <tspan
              dy="0em"
              x="355"
            >
              Time Spent (minutes)
            </tspan>
          </text>
        </svg>
      </g>
      <g
        class="visx-group visx-axis visx-axis-left"
        transform="translate(0.2, 0)"
      >
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0, 0)"
        >
          <svg
            style="overflow: visible;"
            x="-0.5rem"
            y="0"
          >
            <text
              class="!label-small fill-[rgba(0,0,0,0.4)] text-left"
              dominant-baseline="middle"
              text-anchor="end"
              transform=""
              x="-8"
              y="320"
            >
              <tspan
                dy="0.355em"
                x="-8"
              >
                0
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0, 0)"
        >
          <svg
            style="overflow: visible;"
            x="-0.5rem"
            y="0"
          >
            <text
              class="!label-small fill-[rgba(0,0,0,0.4)] text-left"
              dominant-baseline="middle"
              text-anchor="end"
              transform=""
              x="-8"
              y="274.28571428571433"
            >
              <tspan
                dy="0.355em"
                x="-8"
              >
                5,000
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0, 0)"
        >
          <svg
            style="overflow: visible;"
            x="-0.5rem"
            y="0"
          >
            <text
              class="!label-small fill-[rgba(0,0,0,0.4)] text-left"
              dominant-baseline="middle"
              text-anchor="end"
              transform=""
              x="-8"
              y="228.57142857142858"
            >
              <tspan
                dy="0.355em"
                x="-8"
              >
                10,000
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0, 0)"
        >
          <svg
            style="overflow: visible;"
            x="-0.5rem"
            y="0"
          >
            <text
              class="!label-small fill-[rgba(0,0,0,0.4)] text-left"
              dominant-baseline="middle"
              text-anchor="end"
              transform=""
              x="-8"
              y="182.85714285714283"
            >
              <tspan
                dy="0.355em"
                x="-8"
              >
                15,000
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0, 0)"
        >
          <svg
            style="overflow: visible;"
            x="-0.5rem"
            y="0"
          >
            <text
              class="!label-small fill-[rgba(0,0,0,0.4)] text-left"
              dominant-baseline="middle"
              text-anchor="end"
              transform=""
              x="-8"
              y="137.14285714285717"
            >
              <tspan
                dy="0.355em"
                x="-8"
              >
                20,000
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0, 0)"
        >
          <svg
            style="overflow: visible;"
            x="-0.5rem"
            y="0"
          >
            <text
              class="!label-small fill-[rgba(0,0,0,0.4)] text-left"
              dominant-baseline="middle"
              text-anchor="end"
              transform=""
              x="-8"
              y="91.42857142857142"
            >
              <tspan
                dy="0.355em"
                x="-8"
              >
                25,000
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0, 0)"
        >
          <svg
            style="overflow: visible;"
            x="-0.5rem"
            y="0"
          >
            <text
              class="!label-small fill-[rgba(0,0,0,0.4)] text-left"
              dominant-baseline="middle"
              text-anchor="end"
              transform=""
              x="-8"
              y="45.71428571428573"
            >
              <tspan
                dy="0.355em"
                x="-8"
              >
                30,000
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0, 0)"
        >
          <svg
            style="overflow: visible;"
            x="-0.5rem"
            y="0"
          >
            <text
              class="!label-small fill-[rgba(0,0,0,0.4)] text-left"
              dominant-baseline="middle"
              text-anchor="end"
              transform=""
              x="-8"
              y="0"
            >
              <tspan
                dy="0.355em"
                x="-8"
              >
                35,000
              </tspan>
            </text>
          </svg>
        </g>
        <line
          class="visx-line visx-axis-line stroke-border-border"
          fill="transparent"
          shape-rendering="crispEdges"
          stroke="#222"
          stroke-dasharray="4 4"
          stroke-width="1"
          x1="0"
          x2="0"
          y1="320.5"
          y2="0.5"
        />
        <svg
          font-size="10"
          style="overflow: visible;"
          x="0"
          y="0"
        >
          <text
            class="visx-axis-label !label-small fill-text-text font-medium"
            fill="#222"
            font-family="Arial"
            font-size="10"
            text-anchor="middle"
            transform="rotate(-90)"
            x="-160"
            y="-28"
          >
            <tspan
              dy="0em"
              x="-160"
            >
              Amount Spent (INR)
            </tspan>
          </text>
        </svg>
      </g>
      <g
        class="visx-group visx-rows"
        transform="translate(0, 0)"
      >
        <rect
          fill="url('#horizontal-grid-dash-pattern-csp')"
          height="1"
          shape-rendering="crispEdges"
          width="710"
          x="0"
          y="274"
        />
        <rect
          fill="url('#horizontal-grid-dash-pattern-csp')"
          height="1"
          shape-rendering="crispEdges"
          width="710"
          x="0"
          y="229"
        />
        <rect
          fill="url('#horizontal-grid-dash-pattern-csp')"
          height="1"
          shape-rendering="crispEdges"
          width="710"
          x="0"
          y="183"
        />
        <rect
          fill="url('#horizontal-grid-dash-pattern-csp')"
          height="1"
          shape-rendering="crispEdges"
          width="710"
          x="0"
          y="137"
        />
        <rect
          fill="url('#horizontal-grid-dash-pattern-csp')"
          height="1"
          shape-rendering="crispEdges"
          width="710"
          x="0"
          y="91"
        />
        <rect
          fill="url('#horizontal-grid-dash-pattern-csp')"
          height="1"
          shape-rendering="crispEdges"
          width="710"
          x="0"
          y="46"
        />
        <rect
          fill="url('#horizontal-grid-dash-pattern-csp')"
          height="1"
          shape-rendering="crispEdges"
          width="710"
          x="0"
          y="0"
        />
      </g>
      <rect
        fill="rgba(208, 211, 216, 1)"
        height="1"
        shape-rendering="crispEdges"
        width="710"
        x="0"
        y="320"
      />
      <g
        class="visx-group visx-columns"
        transform="translate(0, 0)"
      >
        <rect
          fill="transparent"
          height="320"
          shape-rendering="crispEdges"
          width="1"
          x="0"
          y="0"
        />
        <rect
          fill="url('#vertical-grid-dash-pattern-csp')"
          height="320"
          shape-rendering="crispEdges"
          width="1"
          x="118"
          y="0"
        />
        <rect
          fill="url('#vertical-grid-dash-pattern-csp')"
          height="320"
          shape-rendering="crispEdges"
          width="1"
          x="237"
          y="0"
        />
        <rect
          fill="url('#vertical-grid-dash-pattern-csp')"
          height="320"
          shape-rendering="crispEdges"
          width="1"
          x="355"
          y="0"
        />
        <rect
          fill="url('#vertical-grid-dash-pattern-csp')"
          height="320"
          shape-rendering="crispEdges"
          width="1"
          x="473"
          y="0"
        />
        <rect
          fill="url('#vertical-grid-dash-pattern-csp')"
          height="320"
          shape-rendering="crispEdges"
          width="1"
          x="592"
          y="0"
        />
        <rect
          fill="url('#vertical-grid-dash-pattern-csp')"
          height="320"
          shape-rendering="crispEdges"
          width="1"
          x="710"
          y="0"
        />
      </g>
      <path
        class="visx-linepath"
        d="M0,210.28571428571428L118.33333333333333,182.85714285714283L236.66666666666666,63.999999999999986L355,36.571428571428584L473.3333333333333,128L591.6666666666667,91.42857142857142L710,137.14285714285717"
        fill="transparent"
        stroke="#F15701"
        stroke-linecap="round"
        stroke-width="1"
      />
      <circle
        class="visx-circle"
        cx="0"
        cy="210.28571428571428"
        fill="#F15701"
        r="4"
        stroke="none"
        stroke-width="0"
      />
      <circle
        class="visx-circle"
        cx="118.33333333333333"
        cy="182.85714285714283"
        fill="#F15701"
        r="4"
        stroke="none"
        stroke-width="0"
      />
      <circle
        class="visx-circle"
        cx="236.66666666666666"
        cy="63.999999999999986"
        fill="#F15701"
        r="4"
        stroke="none"
        stroke-width="0"
      />
      <circle
        class="visx-circle"
        cx="355"
        cy="36.571428571428584"
        fill="#F15701"
        r="4"
        stroke="none"
        stroke-width="0"
      />
      <circle
        class="visx-circle"
        cx="473.3333333333333"
        cy="128"
        fill="#F15701"
        r="4"
        stroke="none"
        stroke-width="0"
      />
      <circle
        class="visx-circle"
        cx="591.6666666666667"
        cy="91.42857142857142"
        fill="#F15701"
        r="4"
        stroke="none"
        stroke-width="0"
      />
      <circle
        class="visx-circle"
        cx="710"
        cy="137.14285714285717"
        fill="#F15701"
        r="4"
        stroke="none"
        stroke-width="0"
      />
      <rect
        fill="transparent"
        height="320"
        width="710"
        x="0"
        y="0"
      />
    </g>
  </svg>
</div>
`;
